# bulbagpt-studio

./: .gitignore  ARCHITECTURE.md  README.md  check_data.py  dataset.py  debug_data.py  main.py  requirments.txt  test.py
bulba_rust/: Cargo.toml
bulba_rust/src/: lib.rs  linear_loader.rs  loader.rs  processor.rs  shuffler.rs  trainer.rs
