[package]
name = "bulba_rust"
version = "0.2.0"
edition = "2024"

# Гэта важна! Мы робім бібліятэку, а не бінарнік
[lib]
name = "bulba_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokenizers = "0.22.1"
rayon = "1.8" # Для шматпаточнасці
crossbeam-channel = "0.5"
memmap2 = "0.9"
rand = "0.9.2"
libc = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"